ingress-config/ingress/api-portal-ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-portal
  namespace: api-portal
spec:
  routes:
  - services:
    - name: api-portal-server
      port: 8080
  virtualhost:
    fqdn: #@ "api-portal.{}".format(data.values.ingress.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
